# bayesian_calibration

./: README.md  pyproject.toml  requirements.txt  setup.py
analysis_scripts/: analysis.py  analyze_parameter_cov.py
bacali/: __init__.py  analysis.py  sampler.py  utils.py
bacali.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcmc_output/: mcmc_results__1.nc  mcmc_results__10.nc  mcmc_results__11.nc  mcmc_results__12.nc  mcmc_results__13.nc  mcmc_results__14.nc  mcmc_results__15.nc  mcmc_results__2.nc  mcmc_results__6.nc  mcmc_results__7.nc  mcmc_results__8.nc  mcmc_results__9.nc  mcmc_samples__1.npz  mcmc_samples__10.npz  mcmc_samples__11.npz  mcmc_samples__12.npz  mcmc_samples__13.npz  mcmc_samples__14.npz  mcmc_samples__15.npz  mcmc_samples__2.npz  mcmc_samples__3.npz  mcmc_samples__6.npz  mcmc_samples__7.npz  mcmc_samples__8.npz  mcmc_samples__9.npz  mcmc_summary__1.csv  mcmc_summary__10.csv  mcmc_summary__11.csv  mcmc_summary__12.csv  mcmc_summary__13.csv  mcmc_summary__14.csv  mcmc_summary__15.csv  mcmc_summary__2.csv  mcmc_summary__3.csv  mcmc_summary__4.csv  mcmc_summary__5.csv  mcmc_summary__6.csv  mcmc_summary__7.csv  mcmc_summary__8.csv  mcmc_summary__9.csv  (+15 more)
mcmc_output/model_analysis/: model_values__12.csv  model_values__13.csv  model_values__14.csv  model_values__15.csv  posterior_configs_within_delta__14.csv  (+6 more)
tests/: charging_capacitor.py  charging_capacitor_incomplete.py  config_capacitor.yaml  config_pcb_trace_impedance.yaml  pcb_trace_impedance.py  pcb_trace_impedance_experiment_1.py  pcb_trace_impedance_experiment_2.py
(+106 files in other folders)
